--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -16,7 +16,7 @@
     <a href="${home}">
 	  <c:choose>
 	     <c:when test="${pageContext['request'].userPrincipal != null}">
-      		<spring:message code="button_myhome"/>
+      		<spring:message code="button_myhome" arguments="${pageContext['request'].userPrincipal.name}"/>
 	  	 </c:when>
 	  	 <c:otherwise>
       		<spring:message code="button_signup"/>
